WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130130
Fix the !ENABLE(SQL_DATABASE) build
https://bugs.webkit.org/show_bug.cgi?id=130130
Summary
Fix the !ENABLE(SQL_DATABASE) build
Laszlo Vidacs
Reported
2014-03-12 08:13:20 PDT
Build failed when SQL_DATABASE is not enabled,
r165468
Build command: Tools/Scripts/build-webkit --efl --no-sql-database Error message: Source/WebKit2/UIProcess/API/C/WKDatabaseManager.cpp:34:9: error: 'GenericAPICallback' does not name a type
Attachments
Patch
(1.19 KB, patch)
2014-03-12 08:31 PDT
,
Laszlo Vidacs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Vidacs
Comment 1
2014-03-12 08:31:22 PDT
Created
attachment 226507
[details]
Patch
Csaba Osztrogonác
Comment 2
2014-03-13 09:39:03 PDT
Comment on
attachment 226507
[details]
Patch r=me.
Csaba Osztrogonác
Comment 3
2014-03-13 09:40:25 PDT
Comment on
attachment 226507
[details]
Patch Clearing flags on attachment: 226507 Committed
r165539
: <
http://trac.webkit.org/changeset/165539
>
Csaba Osztrogonác
Comment 4
2014-03-13 09:40:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug