Fix the !ENABLE(SQL_DATABASE) build https://bugs.webkit.org/show_bug.cgi?id=130130

Patch by Laszlo Vidacs <lvidacs.u-szeged@partner.samsung.com> on 2014-03-13
Reviewed by Csaba Osztrogonác.

Add missing #ifdef guard to typedef.

* UIProcess/API/C/WKDatabaseManager.cpp:

Canonical link: https://commits.webkit.org/148134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165539 268f45cc-cd09-0410-ab3c-d52691b4dbfc